--- a/About_me.html
+++ b/About_me.html
@@ -12,9 +12,9 @@
 	<div class="logo-container">
 		<!--<img src="logo_light-bulb.png" class="light-bulb">--!>
 		<h1 class="text-logo">
-			<span class="green">{C0de, </span>
-			<span class="green">Gam€, </span>
-			<span class="green">Sh@re}</span>
+			<span>{C0de, </span>
+			<span>Gam€, </span>
+			<span>Sh@re}</span>
 			<span class="orange">.REPEAT</span>
 		</h1>
 	</div>
@@ -29,18 +29,17 @@
 	</div>
 	<div id="myDropdown" class="dropdown-content">
 		<a href="index.html">HOME</a>
-		<a href="Blog.html">BLOG</a>
-		<a href="#">GAMES</a>
+		<a href="Games.html">GAMES</a>
 		<a href="#">PROJECTS</a>
 		<a href="#">ABOUT ME</a>
 	</div>
 	
 	<img src="AvatarMaker.png" alt="Avatar" class="my-image-Avatar">
-	
+	<hr></hr>
 	<h1 class="spaced-h1">About me</h1>
 	<hr></hr>
 	<h3>
-	My name is Danail Gatev, and I’m currently a student at Sofian Highschool of Mathematics "Paicius of Hilendar" in Bulgaria. 
+	My name is Danail Gatev, and I’m currently a student at Sofian Highschool of Mathematics "Paisius of Hilendar" in Bulgaria. 
 	I’ve always been interested in technology and how things work behind the screen, and over time that interest grew into a real passion for programming and creating games. 
 	I started programming around 12 years old, when I first discovered how exciting it is to make something from nothing — just by typing lines of code. 
 	At first, I was curious about how games and websites were made, but soon I started experimenting on my own, trying to build small projects and solve logical problems. 
@@ -56,5 +55,8 @@
 	But for now, I’m just enjoying the process — learning, experimenting, and seeing how each idea comes to life one step at a time. 
 	Thanks for visiting my page! Feel free to check out my games, projects, or posts — and if you’re also into coding or puzzles, maybe you’ll find something familiar here.
 	</h3>
+	<hr></hr>
+	<h1 class="spaced-h1">Contacts</h1>
+	<hr></hr>
 </body>
 </html>
