--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 	<div class="logo-container">
 		<!--<img src="logo_light-bulb.png" class="light-bulb">-->
 		<h1 class="text-logo">
-			<span class="green">{C0de, </span>
-			<span class="green">Gam€, </span>
-			<span class="green">Sh@re}</span>
+			<span>{C0de, </span>
+			<span>Gam€, </span>
+			<span>Sh@re}</span>
 			<span class="orange">.REPEAT</span>
 		</h1>
 	</div>
@@ -29,12 +29,9 @@
 	</div>
 	<div id="myDropdown" class="dropdown-content">
 		<a href="#">HOME</a>
-		<a href="Blog.html">BLOG</a>
-		<a href="#">GAMES</a>
+		<a href="Games.html">GAMES</a>
 		<a href="#">PROJECTS</a>
 		<a href="About_me.html">ABOUT ME</a>
 	</div>
-
-	<h2>This is home.</h2>
 </body>
 </html>
